# libu8

./: README.md  atomic.c  bytebuf.c  chardata.c  charmaps.h  cityhash.c  configure  configure.ac  configure.in  contour.c  convert.c  cryptofns.c  ctype.c  decomp.h  digestfns.c  entities.h  exceptions.c  filefns.c  fileio.c  filestring.c  libu8.c  libu8fns.c  libu8io.c  libu8text.c  logging.c  make_source_tar  makefile.in  makefile.old  netfns.c  pathfns.c  printf.c  rusage.c  signals.c  sorting.c  srvfns.c  status.c  streamio.c  stringfns.c  threading.c  timefns.c  (+6 more)
debian/: README.Debian  README.source  changelog  control  copyright  dirs  docs  files  libu8-encodings.install  libu8.default.ex  libu8.doc-base  libu8.install  libu81.dirs  libu81.install  manpage.xml.ex  postinst.ex  postrm.ex  preinst  rules  shlibs.local  shlibs.local.ex  watch.ex
debian.old/: changelog  files
docs/: READING  doxygen.cfg  libu8.sgml  libu8convert.sgml  libu8ctype.sgml  libu8filefns.sgml  libu8io.sgml  libu8netfns.sgml  libu8pathfns.sgml  libu8printf.sgml  libu8stringfns.sgml  libu8stringio.sgml  libu8timefns.sgml  libu8xfiles.sgml  makefile  makefile.in
docs/man/man1/: README
docs/notes/print-mutex/: mutex_debug.c  mutex_debug.h  test.c
docs/ronn/: u8_aptversion.1.ronn  u8_debchangelog.1.ronn  u8_dupload.1.ronn  u8_gitbranch.1.ronn  u8_gitcommit.1.ronn  u8_gitpatchcount.1.ronn  u8_gitversion.1.ronn  u8_gzinstall.1  u8_install_shared.1.ronn  u8_xsubst.1.ronn  u8run.1.ronn
docs/website/: index.html
etc/: ax_sign.m4  dpkgname  fileinfo.c  getbuildopt.in  gitchangelog  libu8-2.0.spec  libu8.pc.in  u8_fileinfo.c  u8_gitpatchcount  version.in
etc/intl/: es.po  fr.po  nl.po
exe/: .gdbinit  README  dou8run  justloop.sh  testrun.sh
exe/stripped/: README
include/libu8/: cityhash.h  config.h.in  libu8.h  libu8io.h  revision.h  source.h  threading.h  u8appid.h  u8appinfo.h  u8atomic.h  u8bytebuf.h  u8contour.h  u8convert.h  u8crypto.h  u8ctype.h  u8defines.h  u8digest.h  u8digestfns.h  u8dirfns.h  u8elapsed.h  u8endian.h  u8error.h  u8errors.h  u8exceptions.h  u8filefns.h  u8fileio.h  u8findfiles.h  u8gettext.h  u8libc.h  u8logging.h  u8malloc.h  u8memlist.h  u8millitime.h  u8mktime.h  u8netfns.h  u8pathfns.h  u8piles.h  u8printf.h  u8random.h  u8rusage.h  (+23 more)
lib/: README
lib/stripped/: README
libu8/libu8.xcodeproj/: project.pbxproj
libu8/libu8.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libu8/libu8.xcodeproj/project.xcworkspace/xcuserdata/haase.xcuserdatad/: UserInterfaceState.xcuserstate
libu8/libu8.xcodeproj/xcuserdata/haase.xcuserdatad/xcschemes/: libu8.xcscheme  xcschememanagement.plist
scripts/: u8_aptversion  u8_debchangelog  u8_dupload  u8_gitbranch  u8_gitcommit  u8_gitpatchcount  u8_gitversion  u8_gzinstall.in  u8_install_shared.in  u8_install_version  u8_xsubst  u8ctl
staging/: README
status/: README
tests/: .gdbinit  echosrv.c  getentity.c  justloop.sh  latin1.text  latin1u8.c  makefile  printftest.c  revtestsrv.c  u8recode.c  u8xrecode.c  utf8.text  xtimetest.c
tests/data/: latin2.text
tests/dynamic/: README
tests/tmp/: README
